Add PowerPoint compatible screen size for Impress

I realized that Impress does not have the same screen
  size as PowerPoint. tdf#142286, tdf#142288

  When I load a PowerPoint slide into Impress,
  it was a custom size, but when I add this screen size,
  it shows up with the screen size name.

  And when I load a slide with the added screen size
  into PowerPoint, it also shows up with the PowerPoint
  preset screen size name and not the custom size.

  The screen sizes I have added are as follows

  * Widescreen (Current PowerPoint default)
  * On-scren Show (4:3)
  * On-scren Show (16:9) (Google slide defualt)
  * On-scren Show (16:10)

Change-Id: I33e2bbc36b2c92ecbb85c610c864f735bf540d03